<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".ui.auth.RegisterFragment"
	android:fillViewport="true"
	android:clipChildren="false">

	<LinearLayout
		android:id="@+id/main"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginHorizontal="16dp"
		android:clipChildren="false">

		<com.google.android.material.appbar.MaterialToolbar
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:navigationIcon="@drawable/ic_back"
			app:navigationIconTint="@color/primary"
			android:paddingTop="40dp"
			android:paddingStart="-20dp"
			android:paddingEnd="-20dp">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/input_conta_criar"
				android:textColor="@color/primary"
				android:layout_gravity="center"
				android:textStyle="bold"/>
		</com.google.android.material.appbar.MaterialToolbar>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:clipChildren="false">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/input_email_label"
				android:textStyle="bold"
				android:textColor="@color/primary"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:hint="@string/input_email_placeholder"
				android:inputType="textEmailAddress"
				android:background="@drawable/bg_edit_text"
				android:padding="10dp"
				android:layout_marginTop="4dp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/input_senha_label"
				android:textStyle="bold"
				android:textColor="@color/primary"
				android:layout_marginTop="16dp"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="48dp"
				android:hint="@string/input_senha_placeholder"
				android:inputType="textPassword"
				android:background="@drawable/bg_edit_text"
				android:padding="10dp"
				android:layout_marginTop="4dp"/>

			<com.google.android.material.button.MaterialButton
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/input_login"
				android:textColor="@color/white"
				android:background="@drawable/bt_btn"
				app:backgroundTint="@null"
				android:layout_marginTop="24dp"/>

			<ProgressBar
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:indeterminateTint="@color/primary"
				android:layout_gravity="center"
				android:layout_marginTop="20dp"
				tools:visibility="visible"
				android:visibility="invisible"/>
		</LinearLayout>

		<TextView
			android:id="@+id/textView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/app_creator"
			android:textAlignment="center"/>
	</LinearLayout>

</ScrollView>