<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	tools:context=".ui.auth.LoginFragment"
	android:clipChildren="false"
	android:clipToPadding="false">

	<LinearLayout
		android:id="@+id/main"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:layout_marginHorizontal="16dp"
		app:flow_verticalGap="20dp"
		android:clipChildren="false"
		android:clipToPadding="false">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/input_email_label"
			android:textStyle="bold"
			android:textColor="@color/primary"/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:hint="@string/input_email_placeholder"
			android:inputType="textEmailAddress"
			android:background="@drawable/bg_edit_text"
			android:padding="10dp"
			android:layout_marginTop="4dp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/input_senha_label"
			android:textStyle="bold"
			android:textColor="@color/primary"
			android:layout_marginTop="16dp"/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:hint="@string/input_senha_placeholder"
			android:inputType="textPassword"
			android:background="@drawable/bg_edit_text"
			android:padding="10dp"
			android:layout_marginTop="4dp"/>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/buttonLogin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/input_login"
			android:textColor="@color/white"
			android:background="@drawable/bt_btn"
			app:backgroundTint="@null"
			android:layout_marginTop="24dp"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginTop="4dp">

			<TextView
				android:id="@+id/buttonRegister"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/input_conta_criar"
				android:layout_weight="1"
				android:textAlignment="textStart"
				android:textStyle="bold"
				android:textColor="@color/primary"/>

			<TextView
				android:id="@+id/buttonRecover"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/input_conta_recuperar"
				android:layout_weight="1"
				android:textAlignment="textEnd"
				android:textStyle="bold"
				android:textColor="@color/primary"/>
		</LinearLayout>

		<ProgressBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:indeterminateTint="@color/primary"
			android:layout_gravity="center"
			android:layout_marginTop="20dp"
			tools:visibility="visible"
			android:visibility="invisible"/>
	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>