<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<com.google.android.material.card.MaterialCardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		android:clipToPadding="false"
		android:clipChildren="false"

		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:flow_horizontalBias="0.5"
	>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/ConstraintLayout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="16dp"
			android:clipChildren="false"
			android:clipToPadding="false"
		>
			<TextView
				android:id="@+id/text_description"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/item_task_description"
				android:textSize="16sp"
				android:textStyle="bold"

				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
			/>

			<ImageButton
				android:id="@+id/button_back"
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:background="@android:color/transparent"
				android:src="@drawable/ic_back"
				android:contentDescription="Anterior"
				android:tint="@color/color_default"

				app:layout_constraintTop_toTopOf="@id/button_edit"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintBottom_toBottomOf="@id/button_edit"
				app:layout_constraintEnd_toStartOf="@id/button_delete"
			/>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/button_delete"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:text="@string/item_task_remove"
				android:textSize="12sp"
				style="@style/ButtonTheme"
				android:backgroundTint="@color/button_remove"

				app:layout_constraintTop_toBottomOf="@id/text_description"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@id/button_edit"
				app:layout_constraintHorizontal_chainStyle="packed"
			/>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/button_edit"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:text="@string/item_task_edit"
				android:textSize="12sp"
				style="@style/ButtonTheme"
				android:backgroundTint="@color/button_edit"
				android:layout_marginHorizontal="8dp"
				android:layout_marginVertical="16dp"

				app:layout_constraintTop_toBottomOf="@id/text_description"
				app:layout_constraintStart_toEndOf="@id/button_delete"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toStartOf="@id/button_details"
			/>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/button_details"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:text="@string/item_task_details"
				android:textSize="12sp"
				style="@style/ButtonTheme"
				android:backgroundTint="@color/button_details"

				app:layout_constraintTop_toBottomOf="@id/text_description"
				app:layout_constraintStart_toEndOf="@id/button_edit"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
			/>

			<ImageButton
				android:id="@+id/button_forward"
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:background="@android:color/transparent"
				android:src="@drawable/ic_back"
				android:contentDescription="Anterior"
				android:tint="@color/color_default"
				android:scaleX="-1"

				app:layout_constraintTop_toTopOf="@id/button_edit"
				app:layout_constraintStart_toEndOf="@id/button_details"
				app:layout_constraintBottom_toBottomOf="@id/button_edit"
				app:layout_constraintEnd_toEndOf="parent"
			/>

		</androidx.constraintlayout.widget.ConstraintLayout>

	</com.google.android.material.card.MaterialCardView>
	
</androidx.constraintlayout.widget.ConstraintLayout>